
More information on each of the fixes can be found in the project
development home at https://github.com/projectestac/prestatgeria

Changes in progress
---------------------------------------------------------------------------------------
- PMF: Fixed PHP E_STRICT error when uploading images
- apc.php: Removed script
- Activated https login
- Mailer: Updated submodule


v15.09.25
-------------------------------------------------------------
- Fixed deprecated errors on set_magic_quotes_runtime
- Added opcache control script
- Fixed bugs in export Epub, Export XML, import XML.
- Fixed conversion from iso ISO-8859-1 to utf-8 in mail sending
- Abort exportation when chapters are empty and warn user
- Create a thumbs directory if it doesn't exist


v15.04.17
-------------------------------------------------------------
- Simplified configuration files
- Moved mailer as a submodule
- Improved code for sending e-mail in llibres section
- Fixed compatibility with PHP 5.4
- Fixed import of books


v15.01.26
-------------------------------------------------------------
- Solved issue with the filter in Cataleg de llibres (AGIN 1059-2014-0007)
- Let schools to enable and disable users to make their own books (AGIN 1059-2015-0001)


v14.12.11
-------------------------------------------------------------
- Added apc.php
- Updated Zikula to version 1.3.9


v14.10.30
-------------------------------------------------------------
- Added support for md5 in password hash
- Fixed upload of images in books
- Removed PHP short tags


v14.05.26
-------------------------------------------------------------
- Fixed connection to Books databases from Books Zikula module


v14.05.12
-------------------------------------------------------------
- Updated Zikula to version 1.3.7
- Added works.php


v11.09.14
-------------------------------------------------------------
Errors solucionats:
- El valor d'un paràmetre de la configuració inicial del mòdul AdvMailer era incorrecte.

Canvis: